Single live engine, self-describing plugin jars and phase-gated builds
- One live engine per home at $JK_HOME/lib/jk-engine.jar with a
  jk-engine.toml sidecar; an upgrade parks the old jar for draining.
- jk install is driven by [application]; jk plugin is removed, workers
  publish through jk install, WorkerLib and the sidecar path are
  deleted, and worker classpaths honor only the Maven POM.
- First-party plugins ship as self-describing jars pinned in the lock;
  source layout is detected from the tree, not a jk.toml key.
- The scheduler is phase-gated and critical-path-first: dependents
  admit on upstream artifacts and packaging does not wait on tests.
  Missing outputs restore from the action cache; jk build has --all.

Tickets: JK-2192, JK-2206