@@ -20,6 +20,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentLinkedDeque;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.regex.Matcher;
@@ -63,6 +64,9 @@ public final class JUnitLauncher {
     /** JUnit exclude tags. */
     private List<String> excludeTags = List.of();
 
+    /** {@code [test] serial-tags} — see {@link #withSerialTags}. */
+    private List<String> serialTags = List.of();
+
     /**
      * Extra environment for the test JVM. Used to isolate nested-engine suites ({@code jk-cli}) so
      * {@code EngineTestExtension} cannot force-stop the host engine that is running {@code jk test}, and
@@ -95,14 +99,14 @@ public final class JUnitLauncher {
         if (!testEnv.isEmpty()) {
             flags.add("--enable-native-access=ALL-UNNAMED");
             flags.add("-Djunit.jupiter.extensions.autodetection.enabled=true");
-            // Match Gradle:cli:test — force soft-fail TempDir strategy + short /tmp factory.
-            // Nested engines hardlink into @TempDir caches; macOS then fails Standard delete and
-            // marks the test failed on cleanup even when assertions passed. Soft-fail strategy +
-            // NEVER cleanup mode keep the suite green (dirs are under /tmp and ephemeral).
+            // Match Gradle :cli:test — short /tmp factory + soft-fail delete. Nested engines
+            // hardlink into @TempDir caches; macOS can fail Standard delete. The strategy
+            // reports success anyway. Cleanup stays ALWAYS: NEVER left tens of thousands of
+            // dirs on tmpfs /tmp until the next @TempDir could not allocate an inode.
             flags.add(
                     "-Djunit.jupiter.tempdir.deletion.strategy.default=cc.jumpkick.cli.engine.JkTempDirDeletionStrategy");
             flags.add("-Djunit.jupiter.tempdir.factory.default=cc.jumpkick.cli.engine.JkTempDirFactory");
-            flags.add("-Djunit.jupiter.tempdir.cleanup.mode.default=never");
+            flags.add("-Djunit.jupiter.tempdir.cleanup.mode.default=always");
             String jkHome = testEnv.get("JK_HOME");
             if (jkHome != null && !jkHome.isBlank()) {
                 // Sibling of test-jk-home: <module>/target/test-shared-cache (SharedTestCache).
@@ -316,6 +320,35 @@ public final class JUnitLauncher {
         return this;
     }
 
+    /**
+     * {@code [test] serial-tags}: class-level tags whose classes run on a single trailing worker
+     * instead of the sharded pool (JK-2184). Partitioning is per class — a method-level serial
+     * tag inside an otherwise-untagged class still shards with its class.
+     */
+    public JUnitLauncher withSerialTags(List<String> tags) {
+        this.serialTags = tags == null ? List.of() : List.copyOf(tags);
+        return this;
+    }
+
+    /** List-only discovery with {@code extraExcludes} folded in — the serial-tag partition view. */
+    private List<String> discoverWithExtraExcludes(
+            Path javaBinary, String classpath, Path testClassesDir, List<String> extraExcludes)
+            throws IOException, InterruptedException {
+        List<String> saved = excludeTags;
+        var widened = new ArrayList<>(saved);
+        for (String t : extraExcludes) {
+            if (!widened.contains(t)) widened.add(t);
+        }
+        excludeTags = List.copyOf(widened);
+        try {
+            // noop listener: the full discovery already reported totals; this view must not
+            // grow the denominator a second time.
+            return discoverClasses(javaBinary, classpath, testClassesDir, TestProgressListener.noop());
+        } finally {
+            excludeTags = saved;
+        }
+    }
+
     private List<String> withTagArgs(List<String> base) {
         var out = new ArrayList<>(base);
         if (!includeTags.isEmpty()) out.add("--include-tags=" + String.join(",", includeTags));
@@ -412,9 +445,9 @@ public final class JUnitLauncher {
         var classpathBase = new LinkedHashSet<Path>();
         classpathBase.add(testClassesDir);
         classpathBase.addAll(runtimeClasspath);
-        // Thin pure-jk workers: expand .classpath sidecar / findPluginSdk so PluginMain is on -cp
-        // . Gradle-vendored runners already contain PluginMain; extra entries are harmless.
-        classpathBase.addAll(cc.jumpkick.compile.WorkerClasspath.paths(runnerJar));
+        // Thin workers: jar + Maven runtime closure from the POM. Gradle-vendored runners
+        // already contain PluginMain; extra entries are harmless.
+        classpathBase.addAll(cc.jumpkick.engine.plugin.WorkerLaunchClasspath.paths(runnerJar));
         String classpath = joinClasspath(classpathBase);
         Path javaBinary = javaBinary(javaHome);
 
@@ -514,23 +547,96 @@ public final class JUnitLauncher {
         if (classes.isEmpty()) {
             return new TestSummary(0, 0, 0, 0, List.of());
         }
-        // Don't waste workers on small suites — N workers > N classes leaves
-        // some idle waiting for a class that'll never come.
-        int actualWorkers = Math.min(workers, classes.size());
-        actualWorkers = TestWorkers.clampByHeap(actualWorkers);
+
+        // [test] serial-tags partition (class-level): classes bearing a serial tag leave the
+        // sharded pool and run on one trailing worker. Partitioned by class-list subtraction —
+        // a second list-only discovery with the serial tags excluded — so tag *expressions*
+        // never enter the picture (JK-2184).
+        List<String> serialClasses = List.of();
+        if (!serialTags.isEmpty()) {
+            Set<String> parallelView =
+                    new HashSet<>(discoverWithExtraExcludes(javaBinary, classpath, testClassesDir, serialTags));
+            List<String> par = new ArrayList<>();
+            List<String> ser = new ArrayList<>();
+            for (String c : classes) (parallelView.contains(c) ? par : ser).add(c);
+            classes = par;
+            serialClasses = ser;
+        }
 
         // One shared report per format — all worker threads write into them (both are thread-safe).
         XmlTestReport xml = testResultsDir != null ? new XmlTestReport() : null;
         MarkdownTestReport md = testResultsDir != null ? new MarkdownTestReport() : null;
+
+        TestSummary summary = classes.isEmpty()
+                ? new TestSummary(0, 0, 0, 0, List.of())
+                : runPool(javaBinary, classpath, testClassesDir, workers, listener, classes, xml, md, 0);
+        // A runner-crash sentinel means the fork itself is broken — don't fork it again.
+        boolean crashed = summary.failures().stream().anyMatch(f -> "(test run)".equals(f.testName()));
+        if (!serialClasses.isEmpty() && !crashed) {
+            TestSummary serial =
+                    runPool(javaBinary, classpath, testClassesDir, 1, listener, serialClasses, xml, md, workers);
+            summary = merge(summary, serial);
+        }
+        if (xml != null) {
+            try {
+                xml.writeAll(testResultsDir);
+            } catch (IOException e) {
+                /* non-fatal: tests ran, just report writing failed */
+            }
+        }
+        if (md != null) {
+            try {
+                md.writeAll(testResultsDir.getParent());
+            } catch (IOException e) {
+                /* non-fatal */
+            }
+        }
+        return summary;
+    }
+
+    private static TestSummary merge(TestSummary a, TestSummary b) {
+        var failures = new ArrayList<>(a.failures());
+        failures.addAll(b.failures());
+        var walls = new LinkedHashMap<>(a.classWallMs());
+        b.classWallMs().forEach((k, v) -> walls.merge(k, v, Long::sum));
+        return new TestSummary(
+                a.total() + b.total(),
+                a.succeeded() + b.succeeded(),
+                a.failed() + b.failed(),
+                a.skipped() + b.skipped(),
+                a.classes() + b.classes(),
+                failures,
+                walls);
+    }
+
+    /** One pull-queue pool over {@code classes}; report accumulation stays with the caller. */
+    private TestSummary runPool(
+            Path javaBinary,
+            String classpath,
+            Path testClassesDir,
+            int workers,
+            TestProgressListener listener,
+            List<String> classes,
+            XmlTestReport xml,
+            MarkdownTestReport md,
+            int workerIdBase)
+            throws IOException, InterruptedException {
+        // Don't waste workers on small suites — N workers > N classes leaves
+        // some idle waiting for a class that'll never come.
+        int actualWorkers = Math.min(workers, classes.size());
+        actualWorkers = TestWorkers.clampByHeap(actualWorkers);
 
         var queue = new ConcurrentLinkedDeque<>(classes);
         var aggregators = new ArrayList<ResultAggregator>();
         var workerThreads = new ArrayList<Thread>();
         int[] exits = new int[actualWorkers];
         var captures = new ArrayList<CaptureBuffer>();
+        var lastClasses = new ArrayList<AtomicReference<String>>();
 
         for (int w = 0; w < actualWorkers; w++) {
-            final int workerId = w + 1;
+            // workerIdBase keeps ids unique across the sharded and serial-tag pools, so the
+            // per-worker temp/state suffixes and failure attributions never collide.
+            final int workerId = workerIdBase + w + 1;
             final int idx = w;
             List<String> args =
                     withTagArgs(List.of("--pull", "--worker=" + workerId, "--scan-classpath=" + testClassesDir));
@@ -538,12 +644,15 @@ public final class JUnitLauncher {
             aggregators.add(agg);
             final var crash = new CaptureBuffer();
             captures.add(crash);
+            final var last = new AtomicReference<String>("");
+            lastClasses.add(last);
             final int totalWorkers = actualWorkers;
-            var t = new Thread(
-                    () -> exits[idx] = driveWorker(
-                            javaBinary, classpath, workerId, totalWorkers, args, queue, agg, listener, crash),
-                    "jk-test-worker-" + workerId);
-            t.start();
+            // Virtual: the thread blocks on the child's stdout for the worker's whole life —
+            // exactly the shape VT is for (JK-2212).
+            Thread t = Thread.ofVirtual()
+                    .name("jk-test-worker-" + workerId)
+                    .start(() -> exits[idx] = driveWorker(
+                            javaBinary, classpath, workerId, totalWorkers, args, queue, agg, listener, crash, last));
             workerThreads.add(t);
         }
         // Each worker thread owns its process (via PluginProcess.converse) and
@@ -586,18 +695,26 @@ public final class JUnitLauncher {
                     List.of(new TestSummary.Failure(
                             "(test run)", "", "runner exited " + worstExit, crash.toString(), moduleLabel, "", 0)));
         }
-        if (xml != null) {
-            try {
-                xml.writeAll(testResultsDir);
-            } catch (IOException e) {
-                /* non-fatal: tests ran, just report writing failed */
-            }
-        }
-        if (md != null) {
-            try {
-                md.writeAll(testResultsDir.getParent());
-            } catch (IOException e) {
-                /* non-fatal */
+        // A worker that died mid-suite while its siblings kept going used to vanish silently:
+        // its in-flight class was neither run nor reported, so the suite went green with a
+        // shortfall. Surface every abnormal exit as a failure naming the worker's last class
+        // (idle-watchdog kills land here too — JK-2202). Skipped on user cancel: those exits
+        // are the kill we asked for.
+        if (worstExit != 0 && !cc.jumpkick.run.SessionCancel.cancelled()) {
+            for (int i = 0; i < actualWorkers; i++) {
+                if (exits[i] == 0) continue;
+                total += 1;
+                failed += 1;
+                String cls = lastClasses.get(i).get();
+                allFailures.add(new TestSummary.Failure(
+                        "(worker " + (workerIdBase + i + 1) + ")",
+                        "",
+                        "test worker exited " + exits[i] + " mid-run"
+                                + (cls.isBlank() ? "" : " (last class dispatched: " + cls + ")"),
+                        captures.get(i).text(),
+                        moduleLabel,
+                        cls,
+                        workerIdBase + i + 1));
             }
         }
         return new TestSummary(total, succeeded, failed, skipped, classCount, allFailures, walls);
@@ -609,6 +726,41 @@ public final class JUnitLauncher {
      * writing one line to the child's stdin. Non-protocol lines are user test output — passed through
      * to the parent's stdout, tagged with the worker id.
      */
+    /**
+     * Per-worker env when {@code W > 1}: private temp root, and for nested-engine suites a
+     * per-worker {@code JK_STATE_DIR}. Engine identity is keyed on (state, store), so a shared
+     * state dir means one socket for every worker — and one worker's engine force-stop aborts
+     * its siblings mid-request. The suffix stays short: the state dir holds UDS sockets and
+     * {@code sun_path} is ~108 bytes (JK-2183).
+     */
+    static Map<String, String> workerEnv(Map<String, String> base, int workerId, Path tmp) {
+        Map<String, String> env = new LinkedHashMap<>(base);
+        env.put("TMPDIR", tmp.toString());
+        env.put("TMP", tmp.toString());
+        env.put("TEMP", tmp.toString());
+        env.computeIfPresent("JK_STATE_DIR", (k, dir) -> dir + "-w" + workerId);
+        return env;
+    }
+
+    /**
+     * Inactivity window for pull-mode test workers. Generous: single tests are legitimately
+     * slow (the Android ladder runs minutes per class), but the runner emits an event per test
+     * start/finish, so a silent worker is a hung one — a JLine tty probe once stalled a worker
+     * (and the whole suite) for 3.5h with zero output (JK-2201/JK-2202). Override:
+     * {@code -Djk.test.worker.idle.ms} / {@code JK_TEST_WORKER_IDLE_MS}; {@code 0} disables.
+     */
+    static long workerIdleTimeoutMs() {
+        String prop = System.getProperty("jk.test.worker.idle.ms", System.getenv("JK_TEST_WORKER_IDLE_MS"));
+        if (prop != null && !prop.isBlank()) {
+            try {
+                return Long.parseLong(prop.trim());
+            } catch (NumberFormatException ignored) {
+                // fall through to default
+            }
+        }
+        return 10 * 60_000L;
+    }
+
     private int driveWorker(
             Path javaBinary,
             String classpath,
@@ -618,13 +770,15 @@ public final class JUnitLauncher {
             ConcurrentLinkedDeque<String> queue,
             ResultAggregator aggregator,
             TestProgressListener listener,
-            CaptureBuffer crash) {
+            CaptureBuffer crash,
+            AtomicReference<String> lastClass) {
         // Pull protocol: each "ready" pulls the next class from the shared queue.
         BiConsumer<String, PluginProcess.Conversation> handler = (json, convo) -> {
             String event = Jsonl.str(json, "event");
             if ("ready".equals(event)) {
                 String next = queue.pollFirst();
                 if (next != null) {
+                    lastClass.set(next);
                     convo.send("RUN " + next);
                 } else {
                     convo.send("DONE");
@@ -647,10 +801,7 @@ public final class JUnitLauncher {
                 try {
                     Path tmp = Files.createTempDirectory("jk-tw-" + workerId + "-");
                     flags.add("-Djava.io.tmpdir=" + tmp);
-                    env = new LinkedHashMap<>(testEnv);
-                    env.put("TMPDIR", tmp.toString());
-                    env.put("TMP", tmp.toString());
-                    env.put("TEMP", tmp.toString());
+                    env = workerEnv(testEnv, workerId, tmp);
                 } catch (IOException ignored) {
                     // best-effort isolation
                 }
@@ -665,7 +816,8 @@ public final class JUnitLauncher {
                     env,
                     inferredModuleDir,
                     handler,
-                    passthrough);
+                    passthrough,
+                    workerIdleTimeoutMs());
         } catch (IOException e) {
             listener.onUserOutput(workerId, "reader error: " + e.getMessage());
             return -1;
